<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue"
        android:gravity="center"
        android:paddingBottom="@dimen/default_medium"
        android:paddingTop="@dimen/default_medium"
        android:text="@string/input_number_range_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_medium"
        android:layout_marginRight="@dimen/default_medium"
        android:layout_marginTop="@dimen/default_small"
        android:text="@string/num_selector_info_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_medium"
        android:layout_marginRight="@dimen/default_medium"
        android:layout_marginTop="@dimen/default_medium"
        android:text="@string/from_colon_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ans_start_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_medium"
        android:layout_marginRight="@dimen/default_medium"
        android:layout_marginTop="@dimen/default_small"
        android:background="@drawable/edittext_default"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/one_text" >
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_medium"
        android:layout_marginRight="@dimen/default_medium"
        android:layout_marginTop="@dimen/default_medium"
        android:text="@string/to_colon_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ans_end_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_medium"
        android:layout_marginRight="@dimen/default_medium"
        android:layout_marginTop="@dimen/default_small"
        android:background="@drawable/edittext_default"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="@string/ten_text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_small"
        android:layout_marginTop="@dimen/default_medium"
        android:layout_marginRight="@dimen/default_medium"
        android:layout_marginLeft="@dimen/default_medium"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ans_ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_small"
            android:layout_weight="1"
            android:background="@drawable/button_alert"
            android:onClick="onButtonClick"
            android:text="@string/ok_text"
            android:textSize="@dimen/dialog_num_selector_text_size"
            android:textColor="@drawable/colorstate_blue_darkblue" />

        <Button
            android:id="@+id/ans_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_small"
            android:layout_weight="1"
            android:background="@drawable/button_alert"
            android:onClick="onButtonClick"
            android:text="@string/cancel_text"
            android:textSize="@dimen/dialog_num_selector_text_size"
            android:textColor="@drawable/colorstate_blue_darkblue" />
    </LinearLayout>

</LinearLayout>