<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_blue"
        android:gravity="center"
        android:paddingBottom="@dimen/default_medium"
        android:paddingTop="@dimen/default_medium"
        android:text="@string/notice_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ana_alert_msg_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_medium"
        android:gravity="center"
        android:text="@string/alert_app_terminating_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/ana_not_show_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_large"
        android:text="@string/do_not_show_again_text"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/ana_ok_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_small"
        android:layout_marginLeft="@dimen/default_small"
        android:layout_marginRight="@dimen/default_small"
        android:background="@drawable/button_alert"
        android:onClick="onButtonClick"
        android:text="@string/ok_text"
        android:textSize="@dimen/dialog_button_text_size"
        android:textColor="@drawable/colorstate_blue_darkblue"/>

</LinearLayout>